# CG-RayTracer

./: .gitignore  CMakeLists.txt  README.md  assignment.html
data/: CornellBox-Mirror-Rotated.mtl  cube.mtl  dodgeColorTest.mtl
framework/: CMakeLists.txt
framework/cmake/: CompilerWarnings.cmake  FindFilesystem.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  conan.cmake  download_framework_packages.cmake  download_optional_packages.cmake
framework/example/: CMakeLists.txt
framework/glad/: CMakeLists.txt
framework/glad/include/glad/: glad.h
framework/glad/src/: glad.cpp
framework/include/: disable_all_warnings.h  opengl_includes.h  ray.h  shader.h  trackball.h  window.h
framework/src/: shader.cpp  trackball.cpp  window.cpp
src/: bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.h  draw.cpp  draw.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  ray_tracing.cpp  ray_tracing.h  scene.cpp  scene.h  screen.cpp  screen.h  stb_image.cpp
